--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@ body.bedtime #story-scroll-container::-webkit-scrollbar-thumb:hover { background
       <div class="speed-slider-row">
         <div class="speed-slider-label-row">
           <span class="speed-slider-label">⚡ Speed</span>
-          <span class="speed-value-badge" id="speed-display">1.0×</span>
+          <span class="speed-value-badge" id="speed-display">0.9×</span>
         </div>
-        <input type="range" class="speed-slider" id="speed-slider" min="0.5" max="2.0" step="0.1" value="1.0">
+        <input type="range" class="speed-slider" id="speed-slider" min="0.5" max="2.0" step="0.1" value="0.9">
         <div class="speed-emoji-row">
           <span>🐢 0.5×</span>
           <span>🚶 1.0×</span>
@@ -798,7 +798,7 @@ const S = {
   isRace: false, myRole: null,
   roomCode: null, roomRef: null, unsubscribers: [],
   voiceGender: "female",
-  speed: 1.0,
+  speed: 0.9,
   isAIStory: false,
 };
 
@@ -1288,9 +1288,11 @@ function renderStory(title, body) {
   if (ttsAudio) { ttsAudio.pause(); ttsAudio.src = ''; ttsAudio = null; }
   resetTTSButtons();
   ttsWordTimings = []; ttsPausedAtMs = 0;
-  // Fix 1: Reset scroll to top so story doesn't start scrolled down
-  const scrollContainer = document.getElementById('story-scroll-container');
-  if (scrollContainer) scrollContainer.scrollTop = 0;
+  requestAnimationFrame(() => {
+    const scrollContainer = document.getElementById('story-scroll-container');
+    if (scrollContainer) scrollContainer.scrollTop = 0;
+    window.scrollTo({ top: 0, behavior: 'instant' });
+  });
 }
 
 // ── Double-click word helper ──────────────────────────────
