--- a/index.html
+++ b/index.html
@@ -324,6 +324,68 @@ body.bedtime #story-scroll-container::-webkit-scrollbar-thumb:hover { background
     <span class="dedication">✨ Inspired by Kamryn &amp; Christopher II ✨</span>
   </header>
 
+  <!-- SCREEN: Welcome flow (first time only) -->
+  <div class="screen" id="screen-welcome-1" style="display:none;">
+    <div class="card" style="text-align:center;">
+      <div style="font-size:3rem;margin-bottom:12px;">📖</div>
+      <div class="card-title" style="margin-bottom:8px;">Welcome to ReadUp!</div>
+      <p style="color:var(--body);font-weight:700;font-size:1rem;line-height:1.6;margin-bottom:6px;">A free reading fluency app for kids in Pre-K through 3rd grade.</p>
+      <p style="color:var(--muted);font-weight:700;font-size:0.88rem;line-height:1.5;margin-bottom:16px;">Built by <strong style="color:var(--purple-deep);">Transforming Youth, Inc.</strong> to help every child become a confident reader — whether at home, in a classroom, or on the go.</p>
+      <button class="btn-main btn-green" id="btn-welcome-next-1" style="font-size:1.1rem;">Next →</button>
+    </div>
+  </div>
+
+  <div class="screen" id="screen-welcome-2" style="display:none;">
+    <div class="card" style="text-align:center;">
+      <div style="font-size:3rem;margin-bottom:12px;">🔁</div>
+      <div class="card-title" style="margin-bottom:8px;">The 3-Read Method</div>
+      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:10px;">Research shows that reading a story <strong style="color:var(--purple);">3 times</strong> is one of the fastest ways to build reading fluency.</p>
+      <div style="background:var(--section);border-radius:16px;padding:14px;text-align:left;margin-bottom:12px;">
+        <p style="font-weight:800;color:var(--green);font-size:0.88rem;margin-bottom:6px;">▶ Read #1 — Listen &amp; follow along</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">The teacher reads while words highlight. Your child sees and hears every word.</p>
+        <p style="font-weight:800;color:var(--purple);font-size:0.88rem;margin-bottom:6px;">▶ Read #2 — Read together</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Your child reads along with the teacher. Familiar words come faster.</p>
+        <p style="font-weight:800;color:var(--purple-dark);font-size:0.88rem;margin-bottom:6px;">▶ Read #3 — Read on your own</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">Your child reads independently. Confidence builds with every word.</p>
+      </div>
+      <p style="color:var(--muted);font-weight:700;font-size:0.82rem;line-height:1.5;">AI creates a <strong>brand new story</strong> every time based on your child's interests and grade level. Double-tap any word to hear it spoken.</p>
+      <button class="btn-main btn-green" id="btn-welcome-next-2" style="font-size:1.1rem;">Next →</button>
+    </div>
+  </div>
+
+  <div class="screen" id="screen-welcome-3" style="display:none;">
+    <div class="card" style="text-align:center;">
+      <div style="font-size:3rem;margin-bottom:12px;">👤</div>
+      <div class="card-title" style="margin-bottom:8px;">For Parents</div>
+      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:12px;">ReadUp! tracks your child's progress so you don't have to hover.</p>
+      <div style="background:var(--section);border-radius:16px;padding:14px;text-align:left;margin-bottom:12px;">
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📊 Parent Dashboard</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">See stories read, time spent, favorite topics, and words your child needed help with.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">🔒 PIN Protected</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-bottom:10px;">Default PIN is <strong style="color:var(--purple);">1234</strong>. You can change it in the dashboard settings.</p>
+        <p style="font-weight:800;color:var(--ink);font-size:0.88rem;margin-bottom:6px;">📍 Where to find it</p>
+        <p style="font-weight:700;color:var(--muted);font-size:0.82rem;">Tap <strong>"Parent"</strong> at the bottom of the screen anytime.</p>
+      </div>
+      <button class="btn-main btn-green" id="btn-welcome-next-3" style="font-size:1.1rem;">Next →</button>
+    </div>
+  </div>
+
+  <div class="screen" id="screen-welcome-4" style="display:none;">
+    <div class="card" style="text-align:center;">
+      <div style="font-size:3rem;margin-bottom:12px;">🚀</div>
+      <div class="card-title" style="margin-bottom:8px;">Let's Get Started!</div>
+      <p style="color:var(--body);font-weight:700;font-size:0.92rem;line-height:1.6;margin-bottom:16px;">Pick your child's grade level to begin:</p>
+      <div class="option-row" id="welcome-grade-row" style="justify-content:center;">
+        <button class="opt-btn" data-wgrade="prek" style="min-width:60px;">Pre-K</button>
+        <button class="opt-btn" data-wgrade="k" style="min-width:60px;">K</button>
+        <button class="opt-btn" data-wgrade="1" style="min-width:60px;">1st</button>
+        <button class="opt-btn" data-wgrade="2" style="min-width:60px;">2nd</button>
+        <button class="opt-btn" data-wgrade="3" style="min-width:60px;">3rd</button>
+      </div>
+      <button class="btn-main btn-green" id="btn-welcome-go" style="font-size:1.1rem;margin-top:16px;" disabled>✨ Start Reading!</button>
+    </div>
+  </div>
+
   <!-- SCREEN: Pick -->
   <div class="screen active" id="screen-pick">
     <div class="card">
@@ -559,6 +621,7 @@ body.bedtime #story-scroll-container::-webkit-scrollbar-thumb:hover { background
   <strong>ReadUp!</strong> &nbsp;|&nbsp; A Transforming Youth, Inc. Program &nbsp;|&nbsp; Pre-K – 3rd Grade<br>
   <span class="foot-sub">✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
   <button class="parent-btn" id="btn-open-parent">👤 Parent</button>
+  <button class="parent-btn" id="btn-show-welcome">❓ How it works</button>
 </footer>
 
 <!-- Word saved toast -->
@@ -1719,6 +1782,101 @@ window.addEventListener('offline', () => {
   t.textContent = '📡 No internet — stories still work offline!';
   t.classList.add('show');
   setTimeout(() => t.classList.remove('show'), 4000);
+});
+// ── Welcome / Onboarding Flow ─────────────────────────────
+(function initWelcome() {
+  const d = getData();
+  if (d.onboardingDone) return; // Already completed — skip
+
+  // Hide pick screen, show welcome screen 1
+  document.getElementById('screen-pick').classList.remove('active');
+  document.getElementById('screen-welcome-1').style.display = 'block';
+  document.getElementById('screen-welcome-1').classList.add('active');
+
+  document.getElementById('btn-welcome-next-1').addEventListener('click', () => {
+    document.getElementById('screen-welcome-1').classList.remove('active');
+    document.getElementById('screen-welcome-1').style.display = 'none';
+    document.getElementById('screen-welcome-2').style.display = 'block';
+    document.getElementById('screen-welcome-2').classList.add('active');
+    window.scrollTo({ top: 0, behavior: 'instant' });
+  });
+
+  document.getElementById('btn-welcome-next-2').addEventListener('click', () => {
+    document.getElementById('screen-welcome-2').classList.remove('active');
+    document.getElementById('screen-welcome-2').style.display = 'none';
+    document.getElementById('screen-welcome-3').style.display = 'block';
+    document.getElementById('screen-welcome-3').classList.add('active');
+    window.scrollTo({ top: 0, behavior: 'instant' });
+  });
+
+  document.getElementById('btn-welcome-next-3').addEventListener('click', () => {
+    document.getElementById('screen-welcome-3').classList.remove('active');
+    document.getElementById('screen-welcome-3').style.display = 'none';
+    document.getElementById('screen-welcome-4').style.display = 'block';
+    document.getElementById('screen-welcome-4').classList.add('active');
+    window.scrollTo({ top: 0, behavior: 'instant' });
+  });
+
+  // Grade selection on welcome screen 4
+  let welcomeGrade = null;
+  document.querySelectorAll('#welcome-grade-row .opt-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+      document.querySelectorAll('#welcome-grade-row .opt-btn').forEach(b => b.classList.remove('sel-grade'));
+      btn.classList.add('sel-grade');
+      welcomeGrade = btn.dataset.wgrade;
+      document.getElementById('btn-welcome-go').disabled = false;
+    });
+  });
+
+  document.getElementById('btn-welcome-go').addEventListener('click', () => {
+    if (!welcomeGrade) return;
+    // Set grade in app state and sync to pick screen
+    S.grade = welcomeGrade;
+    const defaultWords = GRADE_DEFAULTS[S.grade] || 100;
+    S.wordTarget = defaultWords;
+    document.querySelectorAll('#grade-row .opt-btn').forEach(b => {
+      b.classList.remove('sel-grade');
+      if (b.dataset.grade === welcomeGrade) b.classList.add('sel-grade');
+    });
+    document.querySelectorAll('#words-row .opt-btn').forEach(b => {
+      b.classList.remove('sel-words');
+      if (parseInt(b.dataset.words) === defaultWords) b.classList.add('sel-words');
+    });
+    // Mark onboarding complete
+    const d = getData();
+    d.onboardingDone = true;
+    saveData(d);
+    // Go to pick screen
+    document.getElementById('screen-welcome-4').classList.remove('active');
+    document.getElementById('screen-welcome-4').style.display = 'none';
+    show('screen-pick');
+  });
+})();
+
+// ── How it works (footer) ─────────────────────────────────
+document.getElementById('btn-show-welcome').addEventListener('click', () => {
+  document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
+  ['screen-welcome-2', 'screen-welcome-3', 'screen-welcome-4'].forEach(id => {
+    document.getElementById(id).style.display = 'none';
+    document.getElementById(id).classList.remove('active');
+  });
+  document.getElementById('screen-welcome-1').style.display = 'block';
+  document.getElementById('screen-welcome-1').classList.add('active');
+  // Re-attach next button handlers in case they were already used
+  const rebind = (fromId, toId) => {
+    const btn = document.getElementById('btn-welcome-next-' + fromId);
+    const fresh = btn.cloneNode(true);
+    btn.parentNode.replaceChild(fresh, btn);
+    fresh.addEventListener('click', () => {
+      document.getElementById('screen-welcome-' + fromId).classList.remove('active');
+      document.getElementById('screen-welcome-' + fromId).style.display = 'none';
+      document.getElementById('screen-welcome-' + toId).style.display = 'block';
+      document.getElementById('screen-welcome-' + toId).classList.add('active');
+      window.scrollTo({ top: 0, behavior: 'instant' });
+    });
+  };
+  rebind(1, 2); rebind(2, 3); rebind(3, 4);
+  window.scrollTo({ top: 0, behavior: 'instant' });
 });
 
 </script>
